--- a/frontend/src/style/misago/variables.less
+++ b/frontend/src/style/misago/variables.less
@@ -208,7 +208,7 @@
 @thread-goto-page-link-active-bg: @gray-lighter;
 @thread-goto-page-link-active-border: @thread-goto-page-link-active-bg;
 
-@thread-flag-block-size: 20px;
+@thread-flag-block-size: 22px;
 @thread-flag-icon-size: 16px;
 
 @thread-flag-icon-opacity: 0.8;
